--- a/elasticsearch.html
+++ b/elasticsearch.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<script src="https://d3js.org/d3.v4.min.js"></script>
+<script src="index.js"></script>
 <html>
   <head>
     <link rel="stylesheet" href="index.css">
@@ -27,8 +29,6 @@
       </div>
     </div>
     
-    <svg width="960" height="960"></svg>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
