--- a/elasticsearch.html
+++ b/elasticsearch.html
@@ -28,7 +28,8 @@
         <div class="foo" style="background:rgb(255,228,181)"></div><h4 style="padding-right: 8px;">Undefined</h4>
       </div>
     </div>
-    
+    <svg width="960" height="960"></svg>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
