--- a/dubbo.html
+++ b/dubbo.html
@@ -6,7 +6,7 @@
     <title>Complex Circles</title>
   </head>
   <body>
-    <div id='my_data_json' data-name='jadx.json'></div>
+    <div id='my_data_json' data-name='netty.json'></div>
     <div>
       <h1 style="text-align:center;">Complex Circles - Elasticsearch</h1>
       <div style="flex-direction: row; display: flex; align-items: center;">
